[package]
name = "query-engine-c-api"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.2"
introspection-core = { path = "../../introspection-engine/core" }
datamodel = { path = "../../libs/datamodel/core" }
introspection-connector = { path = "../../introspection-engine/connectors/introspection-connector" }
sql-introspection-connector = { path = "../../introspection-engine/connectors/sql-introspection-connector", features = ["vendored-openssl"] }
query-engine = { path = "../query-engine", features = ["default"] }
prisma-models = { path = "../prisma-models" }
query-core = { path = "../core" }
connector = { path = "../connectors/query-connector", package = "query-connector" }
graphql-parser = { git = "https://github.com/prisma/graphql-parser" }
user-facing-errors = { path = "../../libs/user-facing-errors"}
request-handlers = { path = "../request-handlers" }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
tracing-opentelemetry = "0.11"
opentelemetry = "0.12"
opentelemetry-otlp = { version = "0.5", features = ["tls", "tls-roots"] }
thiserror = "1.0"
anyhow = "1"
serde_derive = "1.0"
tokio = { version = "1.5.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order", "float_roundtrip"] }
url = "2.1"
connection-string = "0.1.10"
base64 = "0.12"
once_cell = "1.7.2"

[profile.release]
rpath = true